--- a/public/css/app.css
+++ b/public/css/app.css
@@ -157,7 +157,8 @@ body>div>nav{
     position: absolute;
     width: 10px;
     height: 10px;
-    top: 15px;
+    top: 25px;
+    z-index: 0;
     left: 44%;
 }
 .homeSvg{
