--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,282 +1,2 @@
-.logo{
-    width: 50px;
-    height: auto;
-}
-svg{
-    max-width: 300px;
-    width: 200px;
-    height: auto;
-}
-.hiddenTitle{
-    position: absolute;
-    top: -9999px;
-}
-.userContainer{
-    min-width: 100px;
-    max-width: 200px;
-}
-html{
-    scroll-behavior: smooth;
-}
-.containerUserAvatars{
-    align-self: center;
-}
-.userSearchContainer div{
-    min-width: 0;
-}
-select {
-
-    /* styling */
-    background-color: white;
-    border-radius: 4px;
-    display: inline-block;
-    font: inherit;
-    line-height: 1.5em;
-    /* reset */
-
-    margin: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-}
-
-/* arrows */
-select.minimal {
-    padding: 0.5em 3.5em 0.5em 1em;
-    background-image:
-        linear-gradient(45deg, transparent 50%, saddlebrown 50%),
-        linear-gradient(135deg, saddlebrown 50%, transparent 50%),
-        linear-gradient(to right, #ccc, #ccc);
-    background-position:
-        calc(100% - 20px) calc(1em + 2px),
-        calc(100% - 15px) calc(1em + 2px),
-        calc(100% - 2.5em) 0.5em;
-    background-size:
-        5px 5px,
-        5px 5px,
-        1px 1.5em;
-    background-repeat: no-repeat;
-}
-
-select.minimal:focus {
-    background-image:
-        linear-gradient(45deg, saddlebrown 50%, transparent 50%),
-        linear-gradient(135deg, transparent 50%, saddlebrown 50%),
-        linear-gradient(to right, #ccc, #ccc);
-    background-position:
-        calc(100% - 15px) 1em,
-        calc(100% - 20px) 1em,
-        calc(100% - 2.5em) 0.5em;
-    background-size:
-        5px 5px,
-        5px 5px,
-        1px 1.5em;
-    background-repeat: no-repeat;
-    border-color: saddlebrown;
-    outline: 0;
-}
-
-
-select:-moz-focusring {
-    color: transparent;
-    text-shadow: 0 0 0 #000;
-}
-body>div>nav{
-    margin-top: -30px;
-}
-.submitDiv:after{
-    width: 30px;
-    content: '';
-    display: block;
-    height: 30px;
-    position: absolute;
-    top: 10px;
-    right: 8px;
-    z-index: -10;
-    background-image: url("../svg/search.svg");
-}
-.backLink:hover{
-    margin-left: -5px;
-}
-.orderSvg{
-    max-width: 50px;
-    top: -15px;
-    left: -65px;
-}
-.backLink{
-    transition: .3s;
-    background-image: url('../svg/arrow.svg');
-    background-repeat: no-repeat;
-}
-.linkAction{
-    width: 105px;
-    text-align: center;
-}
-.searchInput:focus{
-    width: 192px;
-    padding: 5px 10px;
-}
-.searchInput:focus::placeholder{
-    color:inherit;
-}
-.searchInput::placeholder{
-    color:transparent;
-}
-.containerBookSvg{
-    width: 20px;
-    content: '';
-    display: block;
-    height: 20px;
-    background-image: url("../svg/book.svg");
-}
-.containerGroupSvg{
-    width: 30px;
-    content: '';
-    display: block;
-    height: 30px;
-    background-image: url("../svg/group.svg");
-}
-.lettersContainer{
-    top: 15%;
-}
-.letterLink,.searchInput{
-    transition: .3s;
-}
-.letterLink:hover{
-    border-bottom: 1px solid black;
-}
-.current_page_item{
-    opacity: 1 !important;
-    position: relative;
-}
-.current_page_item:before{
-    content:'•';
-    display: block;
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    top: 25px;
-    z-index: 0;
-    left: 44%;
-}
-.homeSvg{
-    width: 50px;
-    display: block;
-    height: 50px;
-    background-image: url("../svg/house.svg");
-}
-.settingsSvg{
-    width: 50px;
-    display: block;
-    height: 50px;
-    background-image: url("../svg/settings.svg");
-}
-.navSecondary{
-    top: 71px;
-}
-
-
-input[type='radio'] {
-    --active: #6C3725;
-    --active-inner: #fff;
-    --focus: 2px saddlebrown;
-    --border: #bbc1e1;
-    --border-hover: #6C3725;
-    --background: #fff;
-    --disabled: #f6f8ff;
-    --disabled-inner: #e1e6f9;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    height: 21px;
-    outline: none;
-    display: inline-block;
-    vertical-align: top;
-    position: relative;
-    margin: 0;
-    cursor: pointer;
-    border: 1px solid var(--bc, var(--border));
-    background: var(--b, var(--background));
-    transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
-}
-input[type='radio']:after {
-    content: '';
-    display: block;
-    left: 0;
-    top: 0;
-    position: absolute;
-    transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
-}
-input[type='radio']:checked {
-    --b: var(--active);
-    --bc: var(--active);
-    --d-o: 0.3s;
-    --d-t: 0.6s;
-    --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
-}
-input[type='radio']:disabled {
-    --b: var(--disabled);
-    cursor: not-allowed;
-    opacity: 0.9;
-}
-input[type='radio']:disabled:checked {
-    --b: var(--disabled-inner);
-    --bc: var(--border);
-}
-input[type='radio']:disabled + label {
-    cursor: not-allowed;
-}
-input[type='radio']:hover:not(:checked):not(:disabled) {
-    --bc: var(--border-hover);
-}
-input[type='radio']:focus {
-    box-shadow: 0 0 0 var(--focus);
-}
-input[type='radio']:not(.switch) {
-    width: 21px;
-}
-input[type='radio']:not(.switch):after {
-    opacity: var(--o, 0);
-}
-.password{
-    position: absolute;
-    right: 15px;
-    top: 10px;
-}
-input[type='radio']:not(.switch):checked {
-    --o: 1;
-}
-input[type='radio'] + label {
-    line-height: 21px;
-    display: inline-block;
-    vertical-align: top;
-    cursor: pointer;
-    margin-left: 4px;
-}
-input[type='radio'] {
-    border-radius: 50%;
-}
-input[type='radio']:after {
-    width: 19px;
-    height: 19px;
-    border-radius: 50%;
-    background: var(--active-inner);
-    opacity: 0;
-    transform: scale(var(--s, 0.7));
-}
-input[type='radio']:checked {
-    --s: 0.5;
-}
-input:focus{
-    border:1px solid saddlebrown;
-}
-.is-invalid{
-    border:2px solid red !important;
-}
-.invalid-feedback{
-    color: red;
-}
-.containerImgBook{
-    top: 20px;
+.logo{width:50px;height:auto}svg{max-width:300px;width:200px;height:auto}.hiddenTitle{position:absolute;top:-9999px}.userContainer{min-width:100px;max-width:200px}html{scroll-behavior:smooth}.containerUserAvatars{-ms-flex-item-align:center;-ms-grid-row-align:center;align-self:center}.userSearchContainer div{min-width:0}select{background-color:#fff;border-radius:4px;display:inline-block;font:inherit;line-height:1.5em;margin:0;-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-appearance:none;-moz-appearance:none}select.minimal{padding:.5em 3.5em .5em 1em;background-image:-o-linear-gradient(45deg,transparent 50%,#8b4513 50%),-o-linear-gradient(315deg,#8b4513 50%,transparent 50%),-o-linear-gradient(left,#ccc,#ccc);background-image:linear-gradient(45deg,transparent 50%,#8b4513 50%),linear-gradient(135deg,#8b4513 50%,transparent 50%),linear-gradient(to right,#ccc,#ccc);background-position:calc(100% - 20px) calc(1em + 2px),calc(100% - 15px) calc(1em + 2px),calc(100% - 2.5em) .5em;background-size:5px 5px,5px 5px,1px 1.5em;background-repeat:no-repeat}select.minimal:focus{background-image:-o-linear-gradient(45deg,#8b4513 50%,transparent 50%),-o-linear-gradient(315deg,transparent 50%,#8b4513 50%),-o-linear-gradient(left,#ccc,#ccc);background-image:linear-gradient(45deg,#8b4513 50%,transparent 50%),linear-gradient(135deg,transparent 50%,#8b4513 50%),linear-gradient(to right,#ccc,#ccc);background-position:calc(100% - 15px) 1em,calc(100% - 20px) 1em,calc(100% - 2.5em) .5em;background-size:5px 5px,5px 5px,1px 1.5em;background-repeat:no-repeat;border-color:#8b4513;outline:0}select:-moz-focusring{color:transparent;text-shadow:0 0 0 #000}body>div>nav{margin-top:-30px}.submitDiv:after{width:30px;content:'';display:block;height:30px;position:absolute;top:10px;right:8px;z-index:-10;background-image:url(../svg/search.svg)}.backLink:hover{margin-left:-5px}.orderSvg{max-width:50px;top:-15px;left:-65px}.backLink{-webkit-transition:.3s;-o-transition:.3s;transition:.3s;background-image:url(../svg/arrow.svg);background-repeat:no-repeat}.linkAction{width:105px;text-align:center}.searchInput:focus{width:192px;padding:5px 10px}.searchInput:focus::-webkit-input-placeholder{color:inherit}.searchInput:focus::-moz-placeholder{color:inherit}.searchInput:focus:-ms-input-placeholder{color:inherit}.searchInput:focus::-ms-input-placeholder{color:inherit}.searchInput:focus::placeholder{color:inherit}.searchInput::-webkit-input-placeholder{color:transparent}.searchInput::-moz-placeholder{color:transparent}.searchInput:-ms-input-placeholder{color:transparent}.searchInput::-ms-input-placeholder{color:transparent}.searchInput::placeholder{color:transparent}.containerBookSvg{width:20px;content:'';display:block;height:20px;background-image:url(../svg/book.svg)}.containerGroupSvg{width:30px;content:'';display:block;height:30px;background-image:url(../svg/group.svg)}.lettersContainer{top:15%}.letterLink,.searchInput{-webkit-transition:.3s;-o-transition:.3s;transition:.3s}.letterLink:hover{border-bottom:1px solid #000}.current_page_item{opacity:1!important;position:relative}.current_page_item:before{content:'•';display:block;position:absolute;width:10px;height:10px;top:25px;z-index:0;left:44%}.homeSvg{width:50px;display:block;height:50px;background-image:url(../svg/house.svg)}.settingsSvg{width:50px;display:block;height:50px;background-image:url(../svg/settings.svg)}.navSecondary{top:71px}input[type=radio]{--active:#6C3725;--active-inner:#fff;--focus:2px saddlebrown;--border:#bbc1e1;--border-hover:#6C3725;--background:#fff;--disabled:#f6f8ff;--disabled-inner:#e1e6f9;-webkit-appearance:none;-moz-appearance:none;height:21px;outline:0;display:inline-block;vertical-align:top;position:relative;margin:0;cursor:pointer;border:1px solid var(--bc,var(--border));background:var(--b,var(--background));-webkit-transition:background .3s,border-color .3s,-webkit-box-shadow .2s;transition:background .3s,border-color .3s,-webkit-box-shadow .2s;-o-transition:background .3s,border-color .3s,box-shadow .2s;transition:background .3s,border-color .3s,box-shadow .2s;transition:background .3s,border-color .3s,box-shadow .2s,-webkit-box-shadow .2s}.containerStatusName img{max-width: 50px}input[type=radio]:after{content:'';display:block;left:0;top:0;position:absolute;-webkit-transition:opacity var(--d-o,.2s),-webkit-transform var(--d-t,.3s) var(--d-t-e,ease);transition:opacity var(--d-o,.2s),-webkit-transform var(--d-t,.3s) var(--d-t-e,ease);-o-transition:transform var(--d-t,.3s) var(--d-t-e,ease),opacity var(--d-o,.2s);transition:transform var(--d-t,.3s) var(--d-t-e,ease),opacity var(--d-o,.2s);transition:transform var(--d-t,.3s) var(--d-t-e,ease),opacity var(--d-o,.2s),-webkit-transform var(--d-t,.3s) var(--d-t-e,ease)}input[type=radio]:checked{--b:var(--active);--bc:var(--active);--d-o:0.3s;--d-t:0.6s;--d-t-e:cubic-bezier(0.2, 0.85, 0.32, 1.2)}input[type=radio]:disabled{--b:var(--disabled);cursor:not-allowed;opacity:.9}input[type=radio]:disabled:checked{--b:var(--disabled-inner);--bc:var(--border)}input[type=radio]:disabled+label{cursor:not-allowed}input[type=radio]:hover:not(:checked):not(:disabled){--bc:var(--border-hover)}input[type=radio]:focus{-webkit-box-shadow:0 0 0 var(--focus);box-shadow:0 0 0 var(--focus)}input[type=radio]:not(.switch){width:21px}input[type=radio]:not(.switch):after{opacity:var(--o,0)}.password{position:absolute;right:15px;top:10px}input[type=radio]:not(.switch):checked{--o:1}input[type=radio]+label{line-height:21px;display:inline-block;vertical-align:top;cursor:pointer;margin-left:4px}input[type=radio]{border-radius:50%}input[type=radio]:after{width:19px;height:19px;border-radius:50%;background:var(--active-inner);opacity:0;-webkit-transform:scale(var(--s,.7));-ms-transform:scale(var(--s,.7));transform:scale(var(--s,.7))}input[type=radio]:checked{--s:0.5}input:focus{border:1px solid #8b4513}.is-invalid{border:2px solid red!important}.invalid-feedback{color:red}.containerImgBook{top:20px}
 }
