--- a/public/css/app.css
+++ b/public/css/app.css
@@ -58,7 +58,15 @@ select.minimal {
     background-size: 5px 5px, 5px 5px, 1px 1.5em;
     background-repeat: no-repeat
 }
-
+.pictoCart{
+    position: absolute;
+    top: 35px;
+    right: 25px;
+}
+.pictoCart img{
+    width: 70px;
+    max-width: 70px;
+}
 select.minimal:focus {
     background-image: -o-linear-gradient(45deg, #8b4513 50%, transparent 50%), -o-linear-gradient(315deg, transparent 50%, #8b4513 50%), -o-linear-gradient(left, #ccc, #ccc);
     background-image: linear-gradient(45deg, #8b4513 50%, transparent 50%), linear-gradient(135deg, transparent 50%, #8b4513 50%), linear-gradient(to right, #ccc, #ccc);
