--- a/public/css/app.css
+++ b/public/css/app.css
@@ -49,7 +49,9 @@ select {
     -webkit-appearance: none;
     -moz-appearance: none
 }
-
+.pictoSadSmiley{
+    max-width: 200px;
+}
 select.minimal {
     padding: .5em 3.5em .5em 1em;
     background-image: -o-linear-gradient(45deg, transparent 50%, #8b4513 50%), -o-linear-gradient(315deg, #8b4513 50%, transparent 50%), -o-linear-gradient(left, #ccc, #ccc);
@@ -63,6 +65,11 @@ select.minimal {
     top: 35px;
     right: 25px;
 }
+.containerOrdersSection{
+    border-right: 3px solid #7b341e;
+    padding: 50px 0 10px;
+}
+.containerOrders img{max-width: 200px;}
 .pictoCart img{
     width: 70px;
     max-width: 70px;
