--- a/public/css/app.css
+++ b/public/css/app.css
@@ -68,10 +68,11 @@ select.minimal {
     top: 35px;
     right: 25px;
 }
-
+p{
+    max-width: 500px;
+}
 .containerOrdersSection {
     border-right: 3px solid #7b341e;
-    padding: 50px 0 10px;
 }
 
 .containerOrders img {
@@ -202,11 +203,21 @@ body > div > nav {
     height: 50px;
     background-image: url(../svg/settings.svg)
 }
-
-.navSecondary {
-    top: 71px
+footer{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100px;
 }
-
+html{
+    height:99%;
+}
+body{
+    min-height: 100%;
+    position: relative;
+    padding-bottom: 100px;
+}
 input[type=radio] {
     --active: #6C3725;
     --active-inner: #fff;
