add cart details and problems admin

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,7 +15,9 @@ svg {
 .arrowScroll{
     max-width: 50px;
     -webkit-animation: downarrow 1.2s infinite;
-    animation: downarrow 1.2s infinite
+    animation: downarrow 1.2s infinite;
+    position: absolute;
+    right: 0;
 }
 .hiddenTitle {
     position: absolute;
